--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ button:link, button:visited {
 }
 
 button:hover, button:active
-{background-color: red;
+{background-color: yellow;
   font-size: 30px;
   text-align: center;
 }
